k8s/kustomize/overlays/app2-prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-project-app2
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: python-project-app2
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: python-project-app2
